fixed iframe aspect ratio on mobile

--- a/website/styles/marked.css
+++ b/website/styles/marked.css
@@ -28,8 +28,9 @@
 .marked .iframe {
   display: block;
   position: relative;
-  width: 100%;
-  padding-top: calc(9 / 16 * 100%); /*16:9 aspect ratio*/
+  width: 80%;
+  margin: calc(3 * var(--smart-unit)) 10%;
+  padding-top: calc(9 / 16 * 80%); /*16:9 aspect ratio*/
 }
 .marked .iframe > * {
   position: absolute;
@@ -38,9 +39,8 @@
   bottom: 0;
   right: 0;
   display: block;
-  width: 80%;
-  height: 80%;
-  margin: calc(3 * var(--smart-unit)) 10%;
+  width: 100%;
+  height: 100%;
   box-shadow: var(--bs);
 }
 .marked table {
@@ -174,9 +174,11 @@
     padding-right: 0;
     padding-left: 0;
   }
-  .marked .iframe > * {
+  .marked .iframe {
     width: 100%;
-    height: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    padding-top: calc(9 / 16 * 100%); /*16:9 aspect ratio*/
   }
   .marked blockquote {
     border-left-width: 0.5vw;
